--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html data-theme="dark">
 
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
   <title>Solid App</title>
